# real-time-transaction-processor

./: .gitattributes  AGENTS.md  README.md  TODO.md  docker-compose.yaml  pyproject.toml  requirements.txt
docs/: LEARNING_NOTES.md
src/transaction_processor/: __init__.py
src/transaction_processor/api/: main.py  schemas.py
src/transaction_processor/common/: __init__.py  config.py  events.py  kafka_client.py  topics.py
src/transaction_processor/domain/: __init__.py  risk_engine.py
src/transaction_processor/services/: __init__.py  audit_worker.py  decision_worker.py  offset_admin.py  producer_simulator.py  risk_worker.py  settlement_worker.py  topic_admin.py
tests/: smoke_test.py
